--- a/Preprocessor_Page/style.scss
+++ b/Preprocessor_Page/style.scss
@@ -1,3 +1,9 @@
+$text-color-1:white;
+$text-color-2:rgb(237, 237, 237);
+$background-color-1:rgb(23, 23, 23);
+$background-color-2:rgb(68, 68, 68);
+$accent-color:rgb(220, 0, 0);
+
 *{
   margin: 0;
   padding: 0;
@@ -5,29 +11,35 @@
 
 h1{
   font-size: 5em;
+  color: $text-color-1;
 }
 h2{
   font-size: 2.5em;
-  border-bottom: 4px solid orange;
+  border-bottom: 4px solid $accent-color;
   width: 100%;
+  color: $text-color-1;
 }
 h3{
   font-size: 1.5em;
   padding: 1%;
+  color: $text-color-1;
 }
 p{
   font-size: 1em;
+  color: $text-color-2;
 }
 span{
   font-size: 1.1em;
+  color: $text-color-1;
 }
 a{
   text-decoration: none;
   font-size: 1.1em;
-  color: black;
+  color: $text-color-1;
 }
 ul{
   list-style-type: none;
+  color: $text-color-2;
 }
 
 body{
@@ -36,6 +48,7 @@ body{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: $background-color-1;
 }
 
 header{
@@ -55,7 +68,8 @@ header{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  height: 5%;
+  height: 6%;
+  background-color: $background-color-2;
 }
 .header-nav-button{
   display: flex;
@@ -66,7 +80,7 @@ header{
   position: relative;
   svg{
     rect {
-      fill: orange;
+      fill: $accent-color;
       transition: fill 300ms ease-in-out;
     }
   }
@@ -75,7 +89,6 @@ header{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    margin-top: 2px;
     position: absolute;
     white-space: nowrap;
   }
@@ -170,18 +183,18 @@ main{
   overflow: hidden;
   &:hover{
       transform: scale(1.01);
-      border-top: 1px solid black;
-      border-bottom: 1px solid black;
+      border-top: 1px solid $accent-color;
+      border-bottom: 1px solid $accent-color;
   }
   &:active{
       transform: scale(1.01);
-      border-top: 1px solid black;
-      border-bottom: 1px solid black;
+      border-top: 1px solid $accent-color;
+      border-bottom: 1px solid $accent-color;
   }
   &:active{
       transform: scale(1.01);
-      border-top: 1px solid black;
-      border-bottom: 1px solid black;
+      border-top: 1px solid $accent-color;
+      border-bottom: 1px solid $accent-color;
   }
 }
 .home-mods-part-text{
@@ -194,7 +207,6 @@ main{
 .home-mods-part-img{
   height: 100%;
   aspect-ratio: 16 / 9;
-  background-color: grey;
 
   img{
       object-fit: cover;
@@ -231,16 +243,17 @@ main{
   width: 60%;
   height: 100%;
   overflow: hidden;
-  background-color: grey;
 }
 
 footer{
+  margin-top: 10%;
   width: 100%;
   height: 20vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: $background-color-2;
 }
 .footer-nav-socialMedia-main{
   margin-top: 20%;
