--- a/Preprocessor_Page/style.css
+++ b/Preprocessor_Page/style.css
@@ -148,6 +148,7 @@ main {
   justify-content: center;
   align-items: center;
   margin-top: 5%;
+  text-align: center;
 }
 
 #home-gallery {
@@ -296,15 +297,14 @@ main {
 .info-text-contacts {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-direction: column;
   width: 40%;
 }
 
 #info-text-logo {
-  width: 90%;
-  height: 60%;
-  background-color: grey;
+  width: 50%;
+  filter: drop-shadow(0 0 15px rgb(68, 68, 68));
 }
 
 #info-map {
@@ -316,12 +316,16 @@ main {
 footer {
   margin-top: 10%;
   width: 100%;
-  height: 20vh;
+  padding: 0.5% 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: rgb(68, 68, 68);
+}
+
+#footer-logo {
+  filter: drop-shadow(0 0 15px rgb(23, 23, 23));
 }
 
 .footer-nav-socialMedia-main {
