--- a/Preprocessor_Page/style.scss
+++ b/Preprocessor_Page/style.scss
@@ -144,6 +144,7 @@ main{
   justify-content: center;
   align-items: center;
   margin-top: 5%;
+  text-align: center;
 }
 #home-gallery{
   width: 80%;
@@ -286,14 +287,14 @@ main{
 .info-text-contacts{
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-direction: column;
   width: 40%;
 }
 #info-text-logo{
-  width: 90%;
-  height: 60%;
-  background-color: grey;
+  width: 50%;
+  // height: 60%;
+  filter: drop-shadow(0 0 15px $background-color-2);
 }
 #info-map{
   width: 60%;
@@ -304,12 +305,15 @@ main{
 footer{
   margin-top: 10%;
   width: 100%;
-  height: 20vh;
+  padding: 0.5% 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: $background-color-2;
+}
+#footer-logo{
+  filter: drop-shadow(0 0 15px $background-color-1);
 }
 .footer-nav-socialMedia-main{
   margin-top: 20%;
