--- a/Preprocessor_Page/style.css
+++ b/Preprocessor_Page/style.css
@@ -4,36 +4,36 @@
 }
 
 h1 {
-  font-size: 5em;
+  font-size: calc(2em + 3.5vw);
   color: white;
 }
 
 h2 {
-  font-size: 2.5em;
   border-bottom: 4px solid rgb(220, 0, 0);
   width: 100%;
+  font-size: calc(1.25em + 1.5vw);
   color: white;
 }
 
 h3 {
-  font-size: 1.5em;
   padding: 1%;
+  font-size: calc(0.9em + 1.05vw);
   color: white;
 }
 
 p {
-  font-size: 1em;
+  font-size: calc(0.7em + 0.3vw);
   color: rgb(180, 180, 180);
 }
 
 span {
-  font-size: 1.1em;
+  font-size: calc(0.8em + 0.3vw);
   color: white;
 }
 
 a {
   text-decoration: none;
-  font-size: 1.1em;
+  font-size: calc(0.8em + 0.3vw);
   color: white;
 }
 
@@ -109,6 +109,7 @@ main {
   top: 0;
   left: -15%;
   width: 30%;
+  min-width: 300px;
   aspect-ratio: 1/1;
   background-image: linear-gradient(-35deg, rgb(23, 23, 23) 30%, rgba(255, 255, 255, 0)), url(./assets/image.png);
   z-index: -1;
@@ -123,6 +124,7 @@ main {
   position: absolute;
   right: -12.5%;
   bottom: -7.5%;
+  min-width: 300px;
   aspect-ratio: 1/1;
   background-image: linear-gradient(135deg, rgb(23, 23, 23) 30%, rgba(255, 255, 255, 0)), url(./assets/image.png);
   z-index: -1;
@@ -136,7 +138,7 @@ main {
 
 .main {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -206,7 +208,7 @@ main {
 
 .home-mods-main {
   width: 100%;
-  height: 100vh;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -215,13 +217,15 @@ main {
 
 .home-mods-part {
   width: 100%;
-  height: 24%;
+  height: auto;
   display: flex;
   flex-direction: row;
   transform: perspective(1px) translateZ(0);
   transition-duration: 0.3s;
   transition-property: transform;
   overflow: hidden;
+  flex-wrap: wrap;
+  margin-top: 1%;
 }
 .home-mods-part:hover {
   transform: scale(1.01);
@@ -240,7 +244,8 @@ main {
 }
 
 .home-mods-part-text {
-  width: auto;
+  width: 60%;
+  min-width: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -267,9 +272,22 @@ main {
   background-color: rgb(68, 68, 68);
   color: white;
 }
+.home-mods-part-text input:hover, .home-mods-part-text input:active, .home-mods-part-text input:focus {
+  outline: 2px solid rgb(220, 0, 0);
+  outline-offset: -2px;
+  border: none;
+}
+@media screen and (max-width: 1700px) {
+  .home-mods-part-text input {
+    border-radius: 3.5px;
+    margin: 2.5% 0 7.5% 0;
+    min-height: 15%;
+  }
+}
 
 .home-mods-part-img {
-  height: 100%;
+  width: 40%;
+  min-width: 350px;
   aspect-ratio: 16/9;
 }
 .home-mods-part-img img {
@@ -288,10 +306,11 @@ main {
 
 #info-text-main {
   width: 70%;
-  height: 40vh;
+  height: auto;
   display: flex;
   flex-direction: row;
   margin-top: 5%;
+  flex-wrap: wrap;
 }
 
 .info-text-contacts {
@@ -309,8 +328,10 @@ main {
 
 #info-map {
   width: 60%;
-  height: 100%;
+  height: auto;
   overflow: hidden;
+  min-width: 400px;
+  aspect-ratio: 1/1;
 }
 
 #news-text {
@@ -333,7 +354,6 @@ main {
 }
 .news-part-text p {
   padding: 2.5%;
-  font-size: 1.05em;
 }
 
 .news-part-img {
@@ -351,16 +371,24 @@ main {
   height: 100%;
 }
 .news-buttons input {
-  height: 33vh;
   background-color: rgb(220, 0, 0);
+  width: 100%;
+  height: 33vh;
+  border-radius: 10px;
   border: none;
+  font-size: 0.9em;
   text-wrap: wrap;
+  border-radius: 0;
 }
 .news-buttons input:hover, .news-buttons input:active, .news-buttons input:focus {
+  border: 2px solid rgb(220, 0, 0);
   background-color: rgb(30, 30, 30);
+  color: white;
+}
+.news-buttons input:hover, .news-buttons input:active, .news-buttons input:focus {
   outline: 2px solid rgb(220, 0, 0);
   outline-offset: -2px;
-  color: white;
+  border: none;
 }
 
 footer {
