--- a/Preprocessor_Page/register.scss
+++ b/Preprocessor_Page/register.scss
@@ -4,9 +4,21 @@ $text-color-3:white;
 $background-color-1:rgba(255, 255, 255, 0.15);
 $accent-color:rgb(220, 0, 0);
 
+@function font_size_settings($min_font, $coef){
+  @return calc($min_font + $coef);
+}
+
+@mixin text_adjustable($min_font, $coef, $text_color){
+  font-size: font_size_settings($min_font, $coef);
+  color: $text_color;
+}
+
 *{
   padding: 0;
   margin: 0;
+  font-family: "Tektur", serif;
+  font-style: normal;
+  font-weight: 200;
 }
 main {
   display: flex;
@@ -20,13 +32,12 @@ main {
   background-position: 50% 50%;
 }
 h1{
-  font-size: 5em;
-  color: $text-color-1;
+  @include text_adjustable(2em, 3vw, $text-color-1);
+  font-weight:500;
 }
 a{
   text-decoration: none;
-  font-size: 1.1em;
-  color: $text-color-2;
+  @include text_adjustable(0.8em, 0.2vw, $text-color-2);
   &:hover, &:active, &:focus{
     color: $text-color-3;
   }
@@ -35,6 +46,7 @@ a{
   display: flex;
   flex-direction: column;
   width: 30%;
+  min-width: 400px;
   height: 100vh;
   justify-content: center;
   align-items: center;
@@ -85,7 +97,7 @@ a{
   border: none;
   background-color: $accent-color;
   color: $text-color-1;
-  font-size: 1.1em;
+  font-size: calc(0.8em + 0.3vw);
   &:hover, &:active, &:focus{
     background-color: $background-color-1;
     color: $text-color-3;
