deleted:    Preprocessor_Page/assets/9lbhm4k1ouy51.webp 	deleted:    Preprocessor_Page/assets/IMG_20241204_015346_304.png 	new file:   Preprocessor_Page/assets/card1.png 	new file:   Preprocessor_Page/assets/card2.png 	new file:   Preprocessor_Page/assets/card3.png 	new file:   Preprocessor_Page/assets/card4.png 	new file:   Preprocessor_Page/assets/card5.png 	new file:   Preprocessor_Page/assets/header_fon.jpg 	deleted:    Preprocessor_Page/assets/image.png 	deleted:    Preprocessor_Page/assets/image1.png 	new file:   Preprocessor_Page/assets/mods.png 	new file:   Preprocessor_Page/assets/news.jpg 	new file:   Preprocessor_Page/assets/reg_fon.png 	deleted:    Preprocessor_Page/assets/screenshot_00050.png 	modified:   Preprocessor_Page/index.html 	modified:   Preprocessor_Page/news.html 	modified:   Preprocessor_Page/register.css 	modified:   Preprocessor_Page/register.css.map 	modified:   Preprocessor_Page/register.scss 	modified:   Preprocessor_Page/script.js 	modified:   Preprocessor_Page/style.css 	modified:   Preprocessor_Page/style.css.map 	modified:   Preprocessor_Page/style.scss

--- a/Preprocessor_Page/style.css
+++ b/Preprocessor_Page/style.css
@@ -64,9 +64,10 @@ header {
 
 #header-img-main {
   height: 95%;
-  background-image: linear-gradient(to top, rgb(68, 68, 68) 0.25%, rgba(255, 255, 255, 0)), url(./assets/screenshot_00050.png);
-  background-position: center;
+  background-image: linear-gradient(to top, rgb(68, 68, 68) 0.25%, rgba(255, 255, 255, 0)), url(./assets/header_fon.jpg);
   background-repeat: no-repeat;
+  background-position: 0 80%;
+  background-size: cover;
 }
 
 #header-nav {
@@ -120,6 +121,7 @@ main {
   min-width: 300px;
   aspect-ratio: 1/1;
   background-image: linear-gradient(-35deg, rgb(23, 23, 23) 30%, rgba(255, 255, 255, 0)), url(./assets/image.png);
+  background-color: rgb(220, 0, 0);
   z-index: -1;
   overflow: hidden;
   -webkit-clip-path: polygon(0% 0%, 100% 0%, 0% 100%);
@@ -135,6 +137,7 @@ main {
   min-width: 300px;
   aspect-ratio: 1/1;
   background-image: linear-gradient(135deg, rgb(23, 23, 23) 30%, rgba(255, 255, 255, 0)), url(./assets/image.png);
+  background-color: rgb(220, 0, 0);
   z-index: -1;
   width: 30%;
   overflow: hidden;
@@ -409,6 +412,8 @@ main {
 .news-part-img {
   width: 40%;
   aspect-ratio: 16/9;
+  display: flex;
+  align-items: center;
 }
 .news-part-img img {
   width: 100%;
