--- a/Preprocessor_Page/style.scss
+++ b/Preprocessor_Page/style.scss
@@ -81,9 +81,10 @@ header{
 }
 #header-img-main{
   height: 95%;
-  background-image: linear-gradient(to top, $background-color-2 0.25%, rgba(255, 255, 255, 0)), url(./assets/screenshot_00050.png);
-  background-position: center;
+  background-image: linear-gradient(to top, $background-color-2 0.25%, rgba(255, 255, 255, 0)), url(./assets/header_fon.jpg);
   background-repeat: no-repeat;
+  background-position: 0 80%;
+  background-size: cover;
 }
 #header-nav{
   display: flex;
@@ -135,6 +136,7 @@ main{
   min-width: 300px;
   aspect-ratio: 1 / 1;
   background-image: linear-gradient(-35deg, $background-color-1 30%, rgba(255, 255, 255, 0)), url(./assets/image.png);
+  background-color: $accent-color;
   z-index: -1;
   overflow: hidden;
   clip-path: polygon(0% 0%, 100% 0%, 0% 100%);
@@ -148,6 +150,7 @@ main{
   min-width: 300px;
   aspect-ratio: 1 / 1;
   background-image: linear-gradient(135deg, $background-color-1 30%, rgba(255, 255, 255, 0)), url(./assets/image.png);
+  background-color: $accent-color;
   z-index: -1;
   width: 30%;
   overflow: hidden;
@@ -377,6 +380,8 @@ main{
 .news-part-img{
   width: 40%;
   aspect-ratio: 16 / 9;
+  display: flex;
+  align-items: center;
   img{
     width: 100%;
   }
