--- a/Preprocessor_Page/register.css
+++ b/Preprocessor_Page/register.css
@@ -12,7 +12,7 @@ main {
   height: 100%;
   justify-content: center;
   align-items: center;
-  background-image: url(./assets/IMG_20241204_015346_304.png);
+  background-image: url(./assets/reg_fon.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
@@ -27,7 +27,7 @@ h1 {
 a {
   text-decoration: none;
   font-size: calc(0.8em + 0.2vw);
-  color: rgb(150, 150, 150);
+  color: black;
 }
 a:hover, a:active, a:focus {
   color: white;
