--- a/Preprocessor_Page/register.scss
+++ b/Preprocessor_Page/register.scss
@@ -26,7 +26,7 @@ main {
   height: 100%;
   justify-content: center;
   align-items: center;
-  background-image: url(./assets/IMG_20241204_015346_304.png);
+  background-image: url(./assets/reg_fon.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
@@ -37,7 +37,7 @@ h1{
 }
 a{
   text-decoration: none;
-  @include text_adjustable(0.8em, 0.2vw, $text-color-2);
+  @include text_adjustable(0.8em, 0.2vw, $text-color-1);
   &:hover, &:active, &:focus{
     color: $text-color-3;
   }
