--- a/smart-watch-kei/src/App.scss
+++ b/smart-watch-kei/src/App.scss
@@ -3,3 +3,20 @@
   justify-content: center;
   display: flex;
 }
+
+main{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1vh;
+  min-width: 280px;
+  min-height: 280px;
+  background-color: rgb(50, 50, 50);
+
+  input{
+    width: 95%;
+    height: 12vh;
+    font-size: 1.2em;
+  }
+}
