--- a/smart-watch-kei/src/App.scss
+++ b/smart-watch-kei/src/App.scss
@@ -1,7 +1,19 @@
-.App {
-  align-items: center;
-  justify-content: center;
+*{
+  margin: 0;
+  padding: 0;
+}
+body{
+  background-color: rgb(20, 20, 20);
   display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
+.App {
+  width: 280px;
+  height: 280px;
 }
 
 #buttonsScreen{
@@ -9,26 +21,26 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1vh;
-  min-width: 280px;
-  min-height: 280px;
-  background-color: rgb(50, 50, 50);
+  gap: 2.5%;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(70, 70, 70);
   button{
     width: 95%;
-    height: 12vh;
+    height: 45%;
     font-size: 1.2em;
   }
 }
 
 #scheduleScreen{
   display: none;
-  min-width: 280px;
-  min-height: 280px;
+  width: 100%;
+  height: 100%;
   background-color: crimson;
 }
 #changesScreen{
   display: none;
-  min-width: 280px;
-  min-height: 280px;
+  width: 100%;
+  height: 100%;
   background-color: aqua;
 }
