--- a/smart-watch-kei/src/App.scss
+++ b/smart-watch-kei/src/App.scss
@@ -12,8 +12,8 @@ body{
 }
 
 .App {
-  width: 280px;
-  height: 280px;
+  width: 200px;
+  height: 200px;
 }
 
 #buttonsScreen{
@@ -27,8 +27,20 @@ body{
   background-color: rgb(70, 70, 70);
   button{
     width: 95%;
-    height: 45%;
-    font-size: 1.2em;
+    height: 40%;
+    font-size: 1em;
+    border-radius: 10px;
+    border: none;
+  }
+  #groupMainButton{
+    height: 22.5%;
+    border-radius: 0 0 8px 8px;
+    background-color: #0d6efd;
+    color: white;
+  }
+  #changesMainButton{
+    height: 32.5%;
+    border-radius: 10px 10px 0 0;
   }
 }
 
