--- a/smart-watch-kei/src/App.scss
+++ b/smart-watch-kei/src/App.scss
@@ -43,16 +43,60 @@ body{
     border-radius: 10px 10px 0 0;
   }
 }
-
-#scheduleScreen{
+#scheduleScreen, #changesScreen{
   display: none;
   width: 100%;
   height: 100%;
-  background-color: crimson;
+  background-color: rgb(70, 70, 70);
+  overflow: hidden;
 }
-#changesScreen{
-  display: none;
+
+#Swiper{
   width: 100%;
   height: 100%;
-  background-color: aqua;
+}
+.SwiperSlide{
+  display: flex;
+  flex-direction: column;
+  gap: 0.1vh;
+  width: 100%;
+  height: 100%;
+}
+.exerciseMain{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  background-color: yellow;
+  font-size: 0.6em;
+  width: 100%;
+  height: 5vh;
+}
+.exerciseNumber{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 7.5%;
+}
+.exerciseName{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 57%;
+  height: 100%;
+}
+.exerciseClass{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 15%;
+}
+.exerciseTime{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-wrap: wrap;
+  width: 15%;
+  text-align: center;
 }
