--- a/smart-watch-kei/src/App.scss
+++ b/smart-watch-kei/src/App.scss
@@ -51,15 +51,35 @@ body{
   overflow: hidden;
 }
 
+#SwiperMain{
+  width: 100%;
+  height: 100%;
+  .swiper-wrapper{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  }
+}
 #Swiper{
   width: 100%;
   height: 100%;
+  .swiper-wrapper{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+  }
+}
+.SwiperSlideMain{
+  width: 100%;
+  min-height: 100%;
 }
 .SwiperSlide{
   display: flex;
   flex-direction: column;
   gap: 0.1vh;
-  width: 100%;
+  min-width: 100%;
   height: 100%;
 }
 .exerciseMain{
