--- a/smart-watch-kei/src/App.scss
+++ b/smart-watch-kei/src/App.scss
@@ -78,7 +78,9 @@ body{
 .SwiperSlide{
   display: flex;
   flex-direction: column;
-  gap: 0.1vh;
+  align-items: center;
+  justify-content: center;
+  gap: 1.25%;
   min-width: 100%;
   height: 100%;
 }
@@ -89,8 +91,8 @@ body{
   justify-content: space-between;
   background-color: yellow;
   font-size: 0.6em;
-  width: 100%;
-  height: 5vh;
+  width: 97.5%;
+  height: 24%;
 }
 .exerciseNumber{
   display: flex;
