--- a/smart-watch-kei/src/App.scss
+++ b/smart-watch-kei/src/App.scss
@@ -12,8 +12,8 @@ body{
 }
 
 .App {
-  width: 200px;
-  height: 200px;
+  width: 260px;
+  height: 260px;
 }
 
 #buttonsScreen{
@@ -80,19 +80,23 @@ body{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1.25%;
+  gap: 1%;
   min-width: 100%;
   height: 100%;
+  color: white;
 }
 .exerciseMain{
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background-color: yellow;
-  font-size: 0.6em;
-  width: 97.5%;
-  height: 24%;
+  background-color: #0d6efd;
+  font-size: 0.8em;
+  width: 99%;
+  height: 22.25%;
+  border-radius: 5px;
+  outline: 2px solid black;
+  outline-offset: -2px;
 }
 .exerciseNumber{
   display: flex;
