--- a/educational_practice_2/CSS/style.css
+++ b/educational_practice_2/CSS/style.css
@@ -1,3 +1,14 @@
+a {
+  color: black;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+a:hover {
+  background-color: green;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -20,15 +31,9 @@ nav {
 }
 
 .nav_buttons {
-  display: flex;
   width: 20%;
   height: 100%;
   background-color: red;
-  justify-content: center;
-  align-items: center;
-}
-.nav_buttons:hover {
-  background-color: green;
 }
 
 main {
