--- a/educational_practice_2/CSS/style.scss
+++ b/educational_practice_2/CSS/style.scss
@@ -3,6 +3,17 @@
     // padding: 0;
 // }
 
+a{
+    color: black;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &:hover{
+        background-color: green;
+    }
+}
+
 body{
     display: flex;
     flex-direction: column;
@@ -23,15 +34,12 @@ nav{
     height: 100%;
 }
 .nav_buttons{
-    display: flex;
+    // display: flex;
     width: 20%;
     height: 100%;
     background-color: red;
-    justify-content: center;
-    align-items: center;
-    &:hover{
-        background-color: green;
-    }
+    // justify-content: center;
+    // align-items: center;
 }
 
 main{
