new file:   educational_practice_2/CSS/mixin.css 	new file:   educational_practice_2/CSS/mixin.css.map 	new file:   educational_practice_2/CSS/mixin.scss 	modified:   educational_practice_2/CSS/profile.css.map 	modified:   educational_practice_2/CSS/profile.scss 	modified:   educational_practice_2/CSS/style.css.map 	modified:   educational_practice_2/CSS/style.scss

--- a/educational_practice_2/CSS/profile.scss
+++ b/educational_practice_2/CSS/profile.scss
@@ -1,8 +1,4 @@
-@mixin flex-center{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+@import "./mixin.scss";
 
 main{
     @include flex_center;
