--- a/educational_practice_2/CSS/style.scss
+++ b/educational_practice_2/CSS/style.scss
@@ -1,13 +1,9 @@
+@import "./mixin.scss";
+
 // *{
     // margin: 0;
     // padding: 0;
 // }
-
-@mixin flex-center{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
 a{
     @include flex_center;
